Semantic Routines/parser.output
Terminals unused in grammar

    TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list stmt
    3          | stmt

    4 stmt: TOKEN_INT TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON
    5     | TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON
    6     | matrix_ref TOKEN_ASSIGN expr TOKEN_SEMICOLON

    7 expr: value
    8     | value TOKEN_PLUS value
    9     | value TOKEN_MINUS value
   10     | value TOKEN_MUL value

   11 value: TOKEN_IDENT
   12      | TOKEN_NUMBER
   13      | matrix_ref

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_INT (258) 4
    TOKEN_MATRIX (259) 14
    TOKEN_ASSIGN (260) 4 5 6
    TOKEN_PLUS (261) 8
    TOKEN_MINUS (262) 9
    TOKEN_MUL (263) 10
    TOKEN_LBRACKET (264) 14
    TOKEN_RBRACKET (265) 14
    TOKEN_SEMICOLON (266) 4 5 6
    TOKEN_ERROR (267)
    TOKEN_IDENT <name> (268) 4 5 11
    TOKEN_NUMBER <value> (269) 12 14


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    program <stmt> (16)
        on left: 1
        on right: 0
    stmt_list <stmt> (17)
        on left: 2 3
        on right: 1 2
    stmt <stmt> (18)
        on left: 4 5 6
        on right: 2 3
    expr <expr> (19)
        on left: 7 8 9 10
        on right: 4 5 6
    value <expr> (20)
        on left: 11 12 13
        on right: 7 8 9 10
    matrix_ref <expr> (21)
        on left: 14
        on right: 6 13


State 0

    0 $accept: • program $end

    TOKEN_INT     shift, and go to state 1
    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 3

    program     go to state 4
    stmt_list   go to state 5
    stmt        go to state 6
    matrix_ref  go to state 7


State 1

    4 stmt: TOKEN_INT • TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_IDENT  shift, and go to state 8


State 2

   14 matrix_ref: TOKEN_MATRIX • TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 9


State 3

    5 stmt: TOKEN_IDENT • TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 10


State 4

    0 $accept: program • $end

    $end  shift, and go to state 11


State 5

    1 program: stmt_list •
    2 stmt_list: stmt_list • stmt

    TOKEN_INT     shift, and go to state 1
    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 3

    $default  reduce using rule 1 (program)

    stmt        go to state 12
    matrix_ref  go to state 7


State 6

    3 stmt_list: stmt •

    $default  reduce using rule 3 (stmt_list)


State 7

    6 stmt: matrix_ref • TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 13


State 8

    4 stmt: TOKEN_INT TOKEN_IDENT • TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 14


State 9

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET • TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET

    TOKEN_NUMBER  shift, and go to state 15


State 10

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    expr        go to state 18
    value       go to state 19
    matrix_ref  go to state 20


State 11

    0 $accept: program $end •

    $default  accept


State 12

    2 stmt_list: stmt_list stmt •

    $default  reduce using rule 2 (stmt_list)


State 13

    6 stmt: matrix_ref TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    expr        go to state 21
    value       go to state 19
    matrix_ref  go to state 20


State 14

    4 stmt: TOKEN_INT TOKEN_IDENT TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    expr        go to state 22
    value       go to state 19
    matrix_ref  go to state 20


State 15

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER • TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET

    TOKEN_RBRACKET  shift, and go to state 23


State 16

   11 value: TOKEN_IDENT •

    $default  reduce using rule 11 (value)


State 17

   12 value: TOKEN_NUMBER •

    $default  reduce using rule 12 (value)


State 18

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN expr • TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 24


State 19

    7 expr: value •
    8     | value • TOKEN_PLUS value
    9     | value • TOKEN_MINUS value
   10     | value • TOKEN_MUL value

    TOKEN_PLUS   shift, and go to state 25
    TOKEN_MINUS  shift, and go to state 26
    TOKEN_MUL    shift, and go to state 27

    $default  reduce using rule 7 (expr)


State 20

   13 value: matrix_ref •

    $default  reduce using rule 13 (value)


State 21

    6 stmt: matrix_ref TOKEN_ASSIGN expr • TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 28


State 22

    4 stmt: TOKEN_INT TOKEN_IDENT TOKEN_ASSIGN expr • TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 29


State 23

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET • TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 30


State 24

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 5 (stmt)


State 25

    8 expr: value TOKEN_PLUS • value

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    value       go to state 31
    matrix_ref  go to state 20


State 26

    9 expr: value TOKEN_MINUS • value

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    value       go to state 32
    matrix_ref  go to state 20


State 27

   10 expr: value TOKEN_MUL • value

    TOKEN_MATRIX  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 16
    TOKEN_NUMBER  shift, and go to state 17

    value       go to state 33
    matrix_ref  go to state 20


State 28

    6 stmt: matrix_ref TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 6 (stmt)


State 29

    4 stmt: TOKEN_INT TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 4 (stmt)


State 30

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET • TOKEN_NUMBER TOKEN_RBRACKET

    TOKEN_NUMBER  shift, and go to state 34


State 31

    8 expr: value TOKEN_PLUS value •

    $default  reduce using rule 8 (expr)


State 32

    9 expr: value TOKEN_MINUS value •

    $default  reduce using rule 9 (expr)


State 33

   10 expr: value TOKEN_MUL value •

    $default  reduce using rule 10 (expr)


State 34

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER • TOKEN_RBRACKET

    TOKEN_RBRACKET  shift, and go to state 35


State 35

   14 matrix_ref: TOKEN_MATRIX TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET TOKEN_LBRACKET TOKEN_NUMBER TOKEN_RBRACKET •

    $default  reduce using rule 14 (matrix_ref)
